<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginPageBackgroundColor"
            tools:context=".RegisterFragment">

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp"
            android:baselineAligned="false">

        <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/logo"


                android:layout_alignParentStart="true" tools:src="@mipmap/ic_launcherc"/>
        <TextView
                android:layout_width="245dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
        <!-- Snippet from "Add text fields" section goes here. -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:layout_margin="4dp"
                android:hint="@string/hint_username"
                android:layout_alignParentStart="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_register_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/hint_email"
                android:layout_alignParentStart="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_register_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/hint_password"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_register_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirm_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/hint_confirmpassword"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_confirm_text_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Snippet from "Add buttons" section goes here. -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_user"
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="6dp"
                    android:layout_toLeftOf="@id/cancel_button"
                    android:text="@string/add_user"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button_r"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="31dp"

                    android:text="@string/button_cancel"
                    android:layout_marginRight="31dp"/>
            <Button
                    android:text="Back to Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/back_to_login"
                    android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
