<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginPageBackgroundColor"
            tools:context=".LoginFragment">

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp" android:baselineAligned="false">

        <ImageView
                android:src="@mipmap/ic_launcherc"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:id="@+id/logo"


                android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="245dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="132dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
        <!-- Snippet from "Add text fields" section goes here. -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/hint_username"
                android:layout_alignParentStart="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/hint_password"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Snippet from "Add buttons" section goes here. -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/cancel_button"
                    android:text="@string/button_login"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"

                android:layout_marginRight="15dp"
                android:layout_toStartOf="@id/register"
                android:layout_toLeftOf="@id/register"
                android:text="@string/button_cancel" />
            <Button
                    android:text="New User?"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/register"/>

        </RelativeLayout>


    </LinearLayout>
</ScrollView>
